# cheap-game-server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cheap-game-server/: CMakeLists.txt  main.cpp
cheap-game-server/cgs/: cgs.hpp  main_server.cpp  main_server.hpp
cheap-game-server/cgs/msg/: handshake.cpp  handshake.hpp  messages.hpp  msg.hpp  sync_buffer.hpp
cheap-game-server/cgs/room/: gate_keeper.cpp  gate_keeper.hpp  player.hpp
cheap-game-server/cgs/tcp/: tcp.hpp  tcp_acceptor.cpp  tcp_acceptor.hpp  tcp_connection.cpp  tcp_connection.hpp
cheap-game-server/common/: 3rd_headers.hpp  boost_headers.hpp  std_headers.hpp
cheap-game-server/util/: boost_headers.hpp  std_headers.hpp  util.hpp
client/: CMakeLists.txt  application.cpp  application.hpp  gui_renderer.cpp  gui_renderer.hpp  main.cpp  player.hpp  types.hpp  user_events.cpp  user_events.hpp
test-client/: main.cpp
